src/objects/Evernote__Unrelated_Note__c.object
<CustomObject>
    <fields>
        <fullName>Evernote__Evernote_NoteId__c</fullName>
        <description>Guid of the Evernote note declared unrelated</description>
        <label>Evernote Note Id</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Evernote__ObjectId__c</fullName>
        <description>Id of the salesforce record</description>
        <label>Object Id</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Evernote__UserId__c</fullName>
        <description>User id declaring the note unrelated. One person can declare the note as unrelated but another user may disagree</description>
        <label>User Id</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Unrelated Note</label>
    <nameField>
        <label>Unrelated Notes</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Unrelated Notes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>